# MathematicalLogic

./: .gitignore  README.md
ClassicalLogicProofChecker/: CMakeLists.txt  ast.h  axioms.cpp  axioms.h  classical_logic_proof_checker.cpp  classical_logic_proof_checker.h  hash.h  main.cpp  proof_checker.cpp  proof_checker.h
ClassicalLogicProofChecker/parser/: parser.h  parser_exception.h  postfix_string_builder.h
ClassicalLogicProofChecker/tests/: input.txt  output.txt
ClassicalLogicProofChecker/tests/samples/: good1.in  good3.in  good5.in  wrong3.in  wrong4.in  wrong6.in
FormalInequalities/: CMakeLists.txt  main.cpp
FormalInequalities/prover/: prover.cpp  prover.h
FormalInequalities/tests/: output.txt
PredicateCalculusProofProcesser/: CMakeLists.txt
PredicateCalculusProofProcesser/predicate_parser/: parser.cpp  parser.h  predicate_ast.cpp  predicate_ast.h  predicate_parser_exception.h
PredicateCalculusProofProcessor/: CMakeLists.txt  expression_generator.cpp  expression_generator.h  main.cpp
PredicateCalculusProofProcessor/predicate_parser/: axioms.cpp  axioms.h  parser.cpp  parser.h  predicate_ast.cpp  predicate_ast.h  predicate_proof_processor.cpp  predicate_proof_processor.h
PredicateCalculusProofProcessor/predicate_parser/proof_parts/: first_predicate_rule.txt  last_hypo.txt  mp.txt  second_predicate_rule.txt
PredicateCalculusProofProcessor/predicate_parser/utils/: expression_generator.cpp  predicate_parser_exception.h
PredicateCalculusProofProcessor/tests/: input.in  output.txt
PredicateCalculusProofProcessor/tests/parser_tests/: correct_expressions.in  log.txt  output.out
ProofChecker/: CMakeLists.txt  ast.cpp  ast.h  axioms.cpp  axioms.h  hash.h  main.cpp  parser.cpp  parser.h  postfix_string_builder.cpp  postfix_string_builder.h  proof_checker.cpp  proof_checker.h  temporary_functions_for_debug.h
ProofChecker/parser/: parser.cpp  parser.h  postfix_string_builder.cpp  postfix_string_builder.h
ProofChecker/tests/: input.txt
ProofChecker/tests/samples/: good4.in  wrong1.in  wrong2.in  wrong5.in
